[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_abm"
version = "0.0.0"
readme = "README.md"
description = "Evolutionary ABM calibration with Python."

keywords = ["py_abm"]
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: Portuguese",
    "Programming Language :: Python :: 3.8",
]

dependencies = [
    "numpy==1.23.5",
    "pandas==2.0.0",
    "importlib-resources==5.12.0",
    "plotly==5.14.1",
    "pymoo==0.6.0.1",
    "kaleido==0.2.1",
    "pyswarms==1.3.0",
    "ijson==3.2.2",
    "pypop7==0.0.70",
    "cmaes==0.10.0",
    "shade_ils @ git+https://github.com/moesio-f/shadeils.git@v2.0.3",
    "decc==0.2.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.jar"]
